--- a/lab-lee/package.json
+++ b/lab-lee/package.json
@@ -24,7 +24,12 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^3.6.1",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^3.0.1",
     "mocha": "^3.1.0",
+    "mocha-eslint": "^3.0.1",
     "superagent": "^2.3.0"
   }
 }
