--- a/lab-lee/package.json
+++ b/lab-lee/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "DEBUG='duck*' ./node_modules/mocha/bin/mocha",
+    "start": "DEBUG='duck*' node server.js"
   },
   "keywords": [],
   "author": "",
