--- a/lab-kaylyn/package.json
+++ b/lab-kaylyn/package.json
@@ -17,7 +17,8 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "mongoose": "^4.6.1",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "superagent": "^2.3.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
