Tests, routes, server done

--- a/lab-nassir/package.json
+++ b/lab-nassir/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "DEBUG='cat*' node server.js",
+    "test": "DEBUG='cat*' ./node_modules/mocha/bin/mocha"
   },
   "keywords": [],
   "author": "",
