--- a/lab-raziyeh/package.json
+++ b/lab-raziyeh/package.json
@@ -7,18 +7,19 @@
     "test": "test"
   },
   "scripts": {
-    "start":"DEBUG='school*' node server.js",
+    "start": "DEBUG='school*' node server.js",
     "test": "DEBUG='school*' ./node_modules/mocha/mocha.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-    "dependencies": {
+  "dependencies": {
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "http-errors": "^1.5.0",
     "mongoose": "^4.6.1",
     "morgan": "^1.7.0"
   },
@@ -26,6 +27,8 @@
     "body-parser": "^1.15.2",
     "chai": "^3.5.0",
     "mocha": "^3.1.0",
-    "superagent": "^2.3.0"
+    "node-uuid": "^1.4.7",
+    "superagent": "^2.3.0",
+    "uuid": "^2.0.3"
   }
 }
