--- a/lab-lee/package.json
+++ b/lab-lee/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "DEBUG='duck*' ./node_modules/mocha/bin/mocha",
-    "start": "DEBUG='duck*' node server.js"
+    "test": "DEBUG='fowl*' ./node_modules/mocha/bin/mocha",
+    "start": "DEBUG='fowl*' node server.js"
   },
   "keywords": [],
   "author": "",
