--- a/lab-lee/package.json
+++ b/lab-lee/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.1",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "http-errors": "^1.5.0",
     "mongoose": "^4.6.1",
     "morgan": "^1.7.0"
   },
