--- a/lab-judy/package.json
+++ b/lab-judy/package.json
@@ -22,6 +22,7 @@
     "chai": "^3.5.0",
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^3.0.1",
+    "http-errors": "^1.5.0",
     "mocha": "^3.1.0",
     "superagent": "^2.3.0"
   }
