--- a/lab-raziyeh/package.json
+++ b/lab-raziyeh/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "start": "DEBUG='school*' node server.js",
-    "test": "DEBUG='school*' ./node_modules/mocha/bin/mocha"
+    "start": "DEBUG='customer*' node server.js",
+    "test": "DEBUG='customer*' ./node_modules/mocha/bin/mocha"
   },
   "keywords": [],
   "author": "",
