we got a test to work, sweet

--- a/lab-elizabeth/package.json
+++ b/lab-elizabeth/package.json
@@ -4,8 +4,8 @@
   "description": "lab-13-14-mongo-express",
   "main": "server.js",
   "scripts": {
-    "test": "DEBUG='library*' ./node_modules/mocha/bin/mocha",
-    "start": "DEBUG='library*' node server.js"
+    "test": "DEBUG='series*' ./node_modules/mocha/bin/mocha",
+    "start": "DEBUG='series*' node server.js"
   },
   "repository": {
     "type": "git",
