--- a/lab-adam/package.json
+++ b/lab-adam/package.json
@@ -2,7 +2,7 @@
   "name": "mongodb-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "DEBUG='city*' ./node_modules/nodemon/bin/nodemon.js server.js",
     "test": "DEBUG='city*' ./node_modules/mocha/bin/mocha"
